# TMOS_Randomizer_V2

./: .gitignore  CLAUDE.md  HANDOFF_PROMPT.md  PROMPT.md  README.md  activity.md  plan.md  prd.md  ralph.sh  requirements-dev.txt  requirements.txt
projects/TMOS_Randomizer_V2/: CHANGELOG.md  README.md  analyze_parentworld.py  analyze_time_periods.py  debug_chapter2.py  debug_chapter2_phase5.py  debug_conn_plan.py  debug_errors.py  debug_missing_conn.py  debug_phase5.py  debug_screen_pools.py  debug_sections.py  diagnose_screen.py  pyproject.toml  requirements.txt  run_full_validation.py  run_validation.py  start_server.sh  startup.sh  test_section_validation.py
projects/TMOS_Randomizer_V2/config/: default.yaml
projects/TMOS_Randomizer_V2/docs/planning/: algorithm-design.md  component-structure.md  config-schema.md  critical-path.md  data-contract.md  exclusion-list.md  implementation-plan.md  progression-logic.md  randomizer-design.md  section-analysis.md  spoiler-log.md  technical-constraints.md  ui-design.md  variety-and-difficulty.md
projects/TMOS_Randomizer_V2/docs/re/: README.md
projects/TMOS_Randomizer_V2/src/: main.py
projects/TMOS_Randomizer_V2/src/tmos_randomizer/: __init__.py  main.py  plan.py  randomizer.py
projects/TMOS_Randomizer_V2/tests/: __init__.py
projects/TMOS_Randomizer_V2/tests/test_core/: test_chapter.py  test_constants.py  test_encounter_groups.py  test_encounter_lineups.py  test_enemy_stats.py  test_exp_table.py  test_inventory_caps.py  test_items_registry.py  (+4 more)
projects/TMOS_Randomizer_V2/ui/: package-lock.json  package.json
(+224 files in other folders)
